--- a/FarmProduce/Web.config
+++ b/FarmProduce/Web.config
@@ -4,6 +4,14 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
+  </configSections>
+  <connectionStrings>
+    <add name="DBConnectionString" connectionString="Data Source =59.110.168.44; Initial Catalog = StudyOnline; User Id = sa; Password = 123!@#qwe;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+  <appSettings/>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
